--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,31 @@
     <head>
         <meta charset=“UTF-8”>
         <title>Sign Up</title>
-        <link rel=“stylesheet” href=“style.css”>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <nav>
-            <a href="/messages">Messages</a>
-            <a href="/contacts">Contacts</a>
+        <nav class="nav">
+            <a class="nav-links" href="/messages">Messages</a>
+            <a class="nav-links" href="/contacts">Contacts</a>
         </nav>
-        <form action="/user" method="POST">
-            <label for="Email">Email</label><br>
-            <input id="Email" type="text" name="Email"><br>
-            <label for="phone_number">Phone Number</label><br>
-            <input id="phone_number" type="text" name="phone_number"><br>
-            <label for="password">Password</label><br>
-            <input id="password" type="text" name="password"><br>
-            <input type="submit" value="Create Account">
-        </form>
-        <a href="/users/login">Already Have An Account?</a>
+        <div class="form">
+            <form action="/user" method="POST">
+                <div class="input">
+                <label class="label" for="Email">Email</label><br>
+                <input class="textfield-line" id="Email" type="text" name="Email" placeholder="Email"><br>
+                </div>
+                <div class="input">
+                <label class="label" for="phone_number">Phone Number</label><br>
+                <input class="textfield-line" id="phone_number" type="text" name="phone_number" placeholder="Phone Number"><br>
+                </div>
+                <div class="input">
+                <label class="label" for="password">Password</label><br>
+                <input class="textfield-line" id="password" type="password" name="password" placeholder="Password"><br>
+                </div>
+                <input class= "button" type="submit" value="Create Account">
+            </form>
+            <a id="login" href="users/login">Login</a>
+        </div>
             <script src=“main.js”></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
